--- a/sass/org/_lib.scss
+++ b/sass/org/_lib.scss
@@ -226,8 +226,8 @@ h1{
 	--pos-1: 100%;
 	--ang-0: -60deg;
 	--ang-1: 60deg;
-	--c: rgba(43, 24, 0,0.2);
-	--nlist: rgba(183, 82, 10, 0.6), rgba(183, 82, 10, 0);
+	--c: rgba(183, 82, 10, 0.3);
+	--nlist: rgba(183, 82, 10, 0.6) 50%, rgba(183, 82, 10, 0) 0%;
 	
 }
 /*--------------------------------------------------------------
