--- a/sass/org/_lib.scss
+++ b/sass/org/_lib.scss
@@ -61,6 +61,9 @@ $breakpoints: (
 	padding:0;
 	font-family: "M PLUS Rounded 1c",'Source Sans Pro';
 }
+img{
+	vertical-align:top;
+}
 /*--------------------------------------------------------------
 ## Rayout
 --------------------------------------------------------------*/
