--- a/style.css
+++ b/style.css
@@ -1099,6 +1099,84 @@ h1 {
     .single article a:hover {
       animation: bound 1s ease 0s infinite normal; }
 
+.single #comments {
+  display: none; }
+
+.single .nav-links .nav-previous, .single .nav-links .nav-next {
+  margin: 1em 0; }
+  .single .nav-links .nav-previous a, .single .nav-links .nav-next a {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    z-index: 1;
+    position: relative; }
+    .single .nav-links .nav-previous a .nav-title, .single .nav-links .nav-next a .nav-title {
+      color: #2b1800;
+      font-family: "Sawarabi Mincho";
+      text-shadow: 0.3px 0.3px 0.2px #fdfffd, -0.3px -0.3px 0.2px #fdfffd, 0.3px -0.3px 0.2px #fdfffd, -0.3px 0.3px 0.2px #fdfffd;
+      font-weight: bold; }
+    .single .nav-links .nav-previous a:before, .single .nav-links .nav-next a:before {
+      z-index: -1;
+      content: "";
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 90%;
+      height: 2em;
+      --rlist: var(--c) 0 1px, transparent 0 3px;
+      overflow: hidden;
+      background: repeating-linear-gradient(var(--ang-0, -45deg), var(--rlist)) var(--pos-0, 0 0)/var(--dim), linear-gradient(var(--ang), var(--nlist));
+      --dim: 100% no-repeat;
+      --ang: 4deg;
+      --pos-1: 100%;
+      --ang-0: -60deg;
+      --ang-1: 60deg;
+      --c: rgba(250,250,250,1);
+      --nlist: rgba(183, 82, 10, 1) 50%, rgba(183, 82, 10, 0) 0%; }
+    .single .nav-links .nav-previous a .nav-subtitle, .single .nav-links .nav-next a .nav-subtitle {
+      height: 1em; }
+
+.single .nav-links .nav-previous a:before {
+  --ang: -4deg; }
+
+.single .has-background {
+  position: relative;
+  z-index: 1;
+  margin-left: 1.5em;
+  margin-right: 1.5em;
+  padding: 1.5625vw;
+  background: -webkit-linear-gradient(15deg, #cdcdcd 0%, #FFFFFF 70%, #F0F0F0 100%);
+  background: -moz-linear-gradient(15deg, #cdcdcd 0%, #FFFFFF 70%, #F0F0F0 100%);
+  background: -o-linear-gradient(15deg, #cdcdcd 0%, #FFFFFF 70%, #F0F0F0 100%);
+  background: linear-gradient(15deg, #cdcdcd 0%, #FFFFFF 70%, #F0F0F0 100%);
+  filter: drop-shadow(0.39062vw 0.39062vw 0.39062vw rgba(5, 5, 5, 0.9)); }
+  .single .has-background:before, .single .has-background:after {
+    z-index: -1;
+    --p: 0;
+    --s: calc(1 - 2*var(--p));
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    -webkit-mask: var(--m);
+    mask: var(--m);
+    content: ''; }
+  .single .has-background:after {
+    --p: 1 ; }
+  .single .has-background:before, .single .has-background:after {
+    --c0: hsla(0, 0%, 0%, var(--p));
+    --c1: hsla(0, 0%, 0%, calc(1 - var(--p)));
+    background: linear-gradient(calc(var(--p)*90deg), rgba(253, 255, 253, 0.8) 1px, transparent 0, transparent calc(100% - 1px), rgba(253, 255, 253, 0.8) 0) 50% 50%/ 0.35355em 0.35355em;
+    --m: 
+				repeating-linear-gradient(45deg, 
+						red 0, red 2.5em, 
+						transparent 0, transparent 5em), 
+				repeating-linear-gradient(-45deg, 
+						var(--c0) 0, var(--c0) 2.5em, 
+						var(--c1) 0, var(--c1) 5em)
+		; }
+
 @media screen and (max-width: 2400px) {
   .sidebar .s-wrapper {
     position: sticky;
@@ -1529,8 +1607,9 @@ h1 {
     font-size: 1.2em;
     line-height: 1.8em;
     letter-spacing: 0.1em;
-    margin-bottom: 3em;
-    margin-left: 1.3em; } }
+    margin-bottom: 2em;
+    margin-left: 1.3em;
+    margin-top: 1em; } }
 
 @media screen and (max-width: 580px) {
   .single article p {
@@ -1538,7 +1617,28 @@ h1 {
     line-height: 1.8em;
     letter-spacing: 0.1em;
     margin-bottom: 3em;
-    margin-left: 1.3em; } }
+    margin-left: 1.3em;
+    margin-top: 1em; } }
+
+@media screen and (max-width: 2400px) {
+  .single .nav-links .nav-previous a .nav-title, .single .nav-links .nav-next a .nav-title {
+    font-size: 1.4em; }
+  .single .nav-links .nav-previous a .nav-subtitle, .single .nav-links .nav-next a .nav-subtitle {
+    font-size: 3em; } }
+
+@media screen and (max-width: 580px) {
+  .single .nav-links .nav-previous a .nav-title, .single .nav-links .nav-next a .nav-title {
+    font-size: 1.2em; }
+  .single .nav-links .nav-previous a .nav-subtitle, .single .nav-links .nav-next a .nav-subtitle {
+    font-size: 2.5em; } }
+
+@media screen and (max-width: 2400px) {
+  .single .has-background {
+    font-size: 0.9em; } }
+
+@media screen and (max-width: 580px) {
+  .single .has-background {
+    font-size: 0.8em; } }
 
 /*--------------------------------------------------------------
 ## Talk
@@ -1566,7 +1666,8 @@ h1 {
       filter: drop-shadow(1px 1px 1px rgba(5, 5, 5, 0.9)); }
     .talk-base .tk-charactor p {
       display: inline-block;
-      font-size: 0.7em; }
+      font-size: 0.7em;
+      margin: 0; }
   .talk-base .tk-puff {
     display: flex;
     justify-content: flex-start;
@@ -1584,13 +1685,13 @@ h1 {
       height: 0;
       border: 2vw solid transparent; }
       .talk-base .tk-puff .tk-triangle.tkdr-lr {
-        border-right: 8vw solid #FFFFFF; }
+        border-right: 3vw solid #FFFFFF; }
       .talk-base .tk-puff .tk-triangle.tkdr-rl {
-        border-left: 8vw solid #FFFFFF; }
+        border-left: 3vw solid #FFFFFF; }
     .talk-base .tk-puff .tk-content {
       width: auto;
       height: auto;
-      max-width: 80%;
+      max-width: 90%;
       background-color: #FFFFFF;
       border-radius: 34% 33% 31% 32% / 21% 22% 23% 20%;
       padding: 5% 3% 5% 7%;
@@ -1622,15 +1723,15 @@ h1 {
       @media screen and (max-width: 2400px) {
         .talk-base .tk-puff .tk-content .tkc-p {
           font-size: 1.2em;
-          line-height: 1.2em;
+          line-height: 1.5em;
           letter-spacing: 0.1em;
-          margin-bottom: 1em; } }
+          margin-bottom: 0.8em; } }
       @media screen and (max-width: 580px) {
         .talk-base .tk-puff .tk-content .tkc-p {
           font-size: 1em;
-          line-height: 1.2em;
+          line-height: 1.5em;
           letter-spacing: 0.1em;
-          margin-bottom: 1em; } }
+          margin-bottom: 0.8em; } }
   .talk-base.tk-appeared .tk-puff.tkdr-lr {
     animation: PuffInL 0.7s linear 0s 1 normal both; }
   .talk-base.tk-appeared .tk-puff.tkdr-rl {
