--- a/sass/org/_fontsize.scss
+++ b/sass/org/_fontsize.scss
@@ -233,8 +233,9 @@
 				font-size:1.2em;
 				line-height:1.8em;
 				letter-spacing:0.1em;
-				margin-bottom:3em;
+				margin-bottom:2em;
 				margin-left: 1.3em;
+				margin-top: 1em;
 			}
 		}
 		@include mq(md) {
@@ -244,9 +245,42 @@
 				letter-spacing:0.1em;
 				margin-bottom:3em;
 				margin-left: 1.3em;
+				margin-top: 1em;
 			}
 		}
 		
+	}
+	.nav-links{
+		.nav-previous,.nav-next{
+			a{
+				
+				@include mq(xl) {
+					.nav-title{
+						font-size:1.4em;
+					}
+					.nav-subtitle{
+						font-size:3em;
+					}
+				}
+				
+				@include mq(md) {
+					.nav-title{
+						font-size:1.2em;
+					}
+					.nav-subtitle{
+						font-size:2.5em;
+					}
+				}
+			}
+		}
+	}
+	.has-background{
+		@include mq(xl) {
+			font-size:0.9em;
+		}
+		@include mq(md) {
+			font-size:0.8em;
+		}
 	}
 }
 
