--- a/sass/org/_subpage.scss
+++ b/sass/org/_subpage.scss
@@ -86,7 +86,111 @@
 				animation: bound 1s ease 0s infinite normal;
 			}
 		}
-		
+	}
+	#comments{
+		display:none;
+	}
+	.nav-links{
+		.nav-previous,.nav-next{
+			margin: 1em 0;
+			a{
+				text-decoration:none;
+				display:flex;
+				align-items: center;
+				z-index:1;
+				position:relative;
+				
+				.nav-title{
+					color:$cla-d10;
+					font-family: "Sawarabi Mincho";
+					text-shadow: 0.3px 0.3px 0.2px $clb-g10, -0.3px -0.3px 0.2px $clb-g10,
+												0.3px -0.3px 0.2px $clb-g10, -0.3px 0.3px 0.2px $clb-g10;
+					font-weight: bold;
+				}
+				
+				&:before{
+					z-index:-1;
+					content:"";
+					position:absolute;
+					bottom:0;
+					right:0;
+					width:90%;
+					height:2em;
+					
+					--rlist: var(--c) 0 1px, transparent 0 3px;
+					overflow: hidden;
+					background: 
+							repeating-linear-gradient(var(--ang-0, -45deg), 
+									var(--rlist)) var(--pos-0, 0 0)/ var(--dim), 
+							linear-gradient(var(--ang), var(--nlist));
+							
+					--dim: 100% no-repeat;
+					--ang: 4deg;
+					--pos-1: 100%;
+					--ang-0: -60deg;
+					--ang-1: 60deg;
+					--c: rgba(250,250,250,1);
+					--nlist: rgba(183, 82, 10, 1) 50%, rgba(183, 82, 10, 0) 0%;
+				}
+				.nav-subtitle{
+					height:1em;
+				}
+			}
+		}
+		.nav-previous{
+			a{
+				&:before{
+					--ang: -4deg;
+				}
+			}
+		}
 	}
 	
+	.has-background{
+		position: relative;
+		z-index: 1;
+		margin-left: 1.5em;
+		margin-right: 1.5em;
+		padding:1.5625vw;
+		
+		$list-back-grad: 
+			#cdcdcd 0%,
+			#FFFFFF 70%,
+			#F0F0F0 100%;
+
+		@include gradient(15deg, $list-back-grad);
+		
+		&:before, &:after {
+			z-index:-1;
+			--p: 0;
+			--s: calc(1 - 2*var(--p));
+			position: absolute;
+			top: 0; right: 0; bottom: 0; left: 0;
+			-webkit-mask: var(--m);
+							mask: var(--m);
+			content: ''
+		}
+		&:after { --p: 1 }
+		$s: 2.5em;
+		$c: rgba(253, 255, 253,0.8);
+		&:before, &:after {
+			--c0: hsla(0, 0%, 0%, var(--p));
+			--c1: hsla(0, 0%, 0%, calc(1 - var(--p)));
+			background: 
+				linear-gradient(calc(var(--p)*90deg), 
+						$c 1px, transparent 0, 
+						transparent calc(100% - 1px), $c 0) 
+					50% 50%/ #{.14142*$s .14142*$s};
+			--m: 
+				repeating-linear-gradient(45deg, 
+						red 0, red #{$s}, 
+						transparent 0, transparent #{2*$s}), 
+				repeating-linear-gradient(-45deg, 
+						var(--c0) 0, var(--c0) #{$s}, 
+						var(--c1) 0, var(--c1) #{2*$s})
+		}
+		
+		filter: drop-shadow(0.390625vw 0.390625vw 0.390625vw rgba(5, 5, 5, 0.9));
+	}
 }
+
