--- a/sass/org/_talk.scss
+++ b/sass/org/_talk.scss
@@ -35,6 +35,7 @@
 		p{
 			display:inline-block;
 			font-size:0.7em;
+			margin:0;
 		}
 	}
 	
@@ -60,10 +61,10 @@
 			border: 2vw solid transparent;
 			
 			&.tkdr-lr{
-				border-right: 8vw solid #FFFFFF;
+				border-right: 3vw solid #FFFFFF;
 			}
 			&.tkdr-rl{
-				border-left: 8vw solid #FFFFFF;
+				border-left: 3vw solid #FFFFFF;
 			}
 		}
 		.tk-content{
@@ -76,7 +77,7 @@
 			
 			width:auto;
 			height:auto;
-			max-width:80%;
+			max-width:90%;
 			
 			background-color:#FFFFFF;
 			border-radius:34% 33% 31% 32% / 21% 22% 23% 20%;
@@ -113,17 +114,17 @@
 			@include mq(xl) {
 				.tkc-p{
 					font-size:1.2em;
-					line-height:1.2em;
+					line-height:1.5em;
 					letter-spacing:0.1em;
-					margin-bottom:1em;
+					margin-bottom:0.8em;
 				}
 			}
 			@include mq(md) {
 				.tkc-p{
 					font-size:1em;
-					line-height:1.2em;
+					line-height:1.5em;
 					letter-spacing:0.1em;
-					margin-bottom:1em;
+					margin-bottom:0.8em;
 				}
 			}
 		}
