--- a/style.css
+++ b/style.css
@@ -1705,7 +1705,6 @@ h1 {
       height: auto;
       max-width: 90%;
       background-color: #FFFFFF;
-      border-radius: 34% 33% 31% 32% / 21% 22% 23% 20%;
       padding: 5% 3% 5% 7%;
       position: relative;
       z-index: auto; }
@@ -1722,13 +1721,37 @@ h1 {
         left: 0;
         z-index: -1; }
       .talk-base .tk-puff .tk-content::before {
-        background-color: #FFFFFF;
-        transform: rotate(6deg);
-        border-radius: 45% 49% 40% 38% / 22% 32% 28% 33%; }
+        background-color: #FFFFFF; }
       .talk-base .tk-puff .tk-content::after {
-        background-color: #FFFFFF;
-        transform: rotate(-8deg);
-        border-radius: 38% 45% 44% 35% / 36% 27% 32% 27%; }
+        background-color: #FFFFFF; }
+      .talk-base .tk-puff .tk-content.tks-s {
+        border-radius: 47% 43% 31% 32% / 43% 43% 41% 43%; }
+        .talk-base .tk-puff .tk-content.tks-s::before {
+          width: 90%;
+          left: 5%;
+          transform: rotate(15deg);
+          border-radius: 45% 49% 40% 38% / 42% 43% 48% 44%; }
+        .talk-base .tk-puff .tk-content.tks-s::after {
+          width: 90%;
+          left: 5%;
+          transform: rotate(-15deg);
+          border-radius: 38% 45% 44% 35% / 46% 47% 42% 45%; }
+      .talk-base .tk-puff .tk-content.tks-m {
+        border-radius: 34% 33% 31% 32% / 27% 33% 38% 32%; }
+        .talk-base .tk-puff .tk-content.tks-m::before {
+          transform: rotate(8deg);
+          border-radius: 45% 49% 40% 38% / 33% 40% 37% 33%; }
+        .talk-base .tk-puff .tk-content.tks-m::after {
+          transform: rotate(-10deg);
+          border-radius: 38% 45% 44% 35% / 31% 37% 38% 35%; }
+      .talk-base .tk-puff .tk-content.tks-l {
+        border-radius: 34% 33% 31% 32% / 21% 22% 23% 20%; }
+        .talk-base .tk-puff .tk-content.tks-l::before {
+          transform: rotate(6deg);
+          border-radius: 45% 49% 40% 38% / 22% 32% 28% 33%; }
+        .talk-base .tk-puff .tk-content.tks-l::after {
+          transform: rotate(-8deg);
+          border-radius: 38% 45% 44% 35% / 36% 27% 32% 27%; }
       .talk-base .tk-puff .tk-content .tkc-p {
         word-wrap: break-word;
         margin-left: 0; }
