--- a/sass/org/_toppage.scss
+++ b/sass/org/_toppage.scss
@@ -175,18 +175,19 @@
 				
 					@include mq(tb) {
 						position:relative;
-						height:auto;
-						
+						/*height:auto;*/
+						height:100vw;
 						.tpv-bg{
 							position:static;
-							height:auto;
+							height:100%;
 							width:100%;
-							object-fit:contain;
+							object-fit:cover;
 						}
 						.tpv-area{
-							position:static;
-							margin-top:-20%;
-							height:auto;
+							position:absolute;
+							bottom:0;
+							/*margin-top:-20%;*/
+							height:50%;
 						}
 					}
 					@include mq(md) {
